--- a/scaleway/testdata/instance-volume-resize-not-block.cassette.yaml
+++ b/scaleway/testdata/instance-volume-resize-not-block.cassette.yaml
@@ -2,7 +2,7 @@
 version: 1
 interactions:
 - request:
-    body: '{"name":"tf-vol-pedantic-tesla","project":"105bdce1-64c0-48ab-899d-868455867ecf","volume_type":"l_ssd","size":20000000000}'
+    body: '{"name":"tf-vol-dreamy-tereshkova","project":"105bdce1-64c0-48ab-899d-868455867ecf","volume_type":"l_ssd","size":20000000000}'
     form: {}
     headers:
       Content-Type:
@@ -13,22 +13,22 @@ interactions:
     url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes
     method: POST
   response:
-    body: '{"volume": {"id": "d1f23647-e3a1-4c8f-b20e-eddb2f6f5301", "name": "tf-vol-pedantic-tesla",
+    body: '{"volume": {"id": "8ac0fd56-7cf9-4c1d-a01b-6e61ba4970f7", "name": "tf-vol-dreamy-tereshkova",
       "volume_type": "l_ssd", "export_uri": null, "organization": "105bdce1-64c0-48ab-899d-868455867ecf",
       "project": "105bdce1-64c0-48ab-899d-868455867ecf", "server": null, "size": 20000000000,
-      "state": "available", "creation_date": "2021-12-20T16:59:58.188808+00:00", "modification_date":
-      "2021-12-20T16:59:58.188808+00:00", "zone": "fr-par-1"}}'
+      "state": "available", "creation_date": "2021-12-07T10:50:17.654997+00:00", "modification_date":
+      "2021-12-07T10:50:17.654997+00:00", "zone": "fr-par-1"}}'
     headers:
       Content-Length:
-      - "431"
+      - "434"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
       - application/json
       Date:
-      - Mon, 20 Dec 2021 16:59:58 GMT
+      - Tue, 07 Dec 2021 10:50:18 GMT
       Location:
-      - https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/d1f23647-e3a1-4c8f-b20e-eddb2f6f5301
+      - https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/8ac0fd56-7cf9-4c1d-a01b-6e61ba4970f7
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -38,7 +38,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 1ec47a75-0e5a-41d9-a66e-36f74501b0d4
+      - 953bb8fd-eb68-4798-a2a2-bf92079f253f
     status: 201 Created
     code: 201
     duration: ""
@@ -49,23 +49,23 @@ interactions:
       User-Agent:
       - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/d1f23647-e3a1-4c8f-b20e-eddb2f6f5301
+    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/8ac0fd56-7cf9-4c1d-a01b-6e61ba4970f7
     method: GET
   response:
-    body: '{"volume": {"id": "d1f23647-e3a1-4c8f-b20e-eddb2f6f5301", "name": "tf-vol-pedantic-tesla",
+    body: '{"volume": {"id": "8ac0fd56-7cf9-4c1d-a01b-6e61ba4970f7", "name": "tf-vol-dreamy-tereshkova",
       "volume_type": "l_ssd", "export_uri": null, "organization": "105bdce1-64c0-48ab-899d-868455867ecf",
       "project": "105bdce1-64c0-48ab-899d-868455867ecf", "server": null, "size": 20000000000,
-      "state": "available", "creation_date": "2021-12-20T16:59:58.188808+00:00", "modification_date":
-      "2021-12-20T16:59:58.188808+00:00", "zone": "fr-par-1"}}'
+      "state": "available", "creation_date": "2021-12-07T10:50:17.654997+00:00", "modification_date":
+      "2021-12-07T10:50:17.654997+00:00", "zone": "fr-par-1"}}'
     headers:
       Content-Length:
-      - "431"
+      - "434"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
       - application/json
       Date:
-      - Mon, 20 Dec 2021 16:59:58 GMT
+      - Tue, 07 Dec 2021 10:50:18 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -75,7 +75,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 69640d7c-a828-4346-abda-9c10192048b2
+      - 15b7c020-2aa8-4123-9a1e-5627f22f225c
     status: 200 OK
     code: 200
     duration: ""
@@ -86,23 +86,23 @@ interactions:
       User-Agent:
       - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/d1f23647-e3a1-4c8f-b20e-eddb2f6f5301
+    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/8ac0fd56-7cf9-4c1d-a01b-6e61ba4970f7
     method: GET
   response:
-    body: '{"volume": {"id": "d1f23647-e3a1-4c8f-b20e-eddb2f6f5301", "name": "tf-vol-pedantic-tesla",
+    body: '{"volume": {"id": "8ac0fd56-7cf9-4c1d-a01b-6e61ba4970f7", "name": "tf-vol-dreamy-tereshkova",
       "volume_type": "l_ssd", "export_uri": null, "organization": "105bdce1-64c0-48ab-899d-868455867ecf",
       "project": "105bdce1-64c0-48ab-899d-868455867ecf", "server": null, "size": 20000000000,
-      "state": "available", "creation_date": "2021-12-20T16:59:58.188808+00:00", "modification_date":
-      "2021-12-20T16:59:58.188808+00:00", "zone": "fr-par-1"}}'
+      "state": "available", "creation_date": "2021-12-07T10:50:17.654997+00:00", "modification_date":
+      "2021-12-07T10:50:17.654997+00:00", "zone": "fr-par-1"}}'
     headers:
       Content-Length:
-      - "431"
+      - "434"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
       - application/json
       Date:
-      - Mon, 20 Dec 2021 16:59:58 GMT
+      - Tue, 07 Dec 2021 10:50:18 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -112,7 +112,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 891c9cd3-1c5e-40eb-be88-1961b9976137
+      - 171c0bd0-0bf3-4bde-ae27-9d7244c68c1e
     status: 200 OK
     code: 200
     duration: ""
@@ -123,23 +123,23 @@ interactions:
       User-Agent:
       - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/d1f23647-e3a1-4c8f-b20e-eddb2f6f5301
+    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/8ac0fd56-7cf9-4c1d-a01b-6e61ba4970f7
     method: GET
   response:
-    body: '{"volume": {"id": "d1f23647-e3a1-4c8f-b20e-eddb2f6f5301", "name": "tf-vol-pedantic-tesla",
+    body: '{"volume": {"id": "8ac0fd56-7cf9-4c1d-a01b-6e61ba4970f7", "name": "tf-vol-dreamy-tereshkova",
       "volume_type": "l_ssd", "export_uri": null, "organization": "105bdce1-64c0-48ab-899d-868455867ecf",
       "project": "105bdce1-64c0-48ab-899d-868455867ecf", "server": null, "size": 20000000000,
-      "state": "available", "creation_date": "2021-12-20T16:59:58.188808+00:00", "modification_date":
-      "2021-12-20T16:59:58.188808+00:00", "zone": "fr-par-1"}}'
+      "state": "available", "creation_date": "2021-12-07T10:50:17.654997+00:00", "modification_date":
+      "2021-12-07T10:50:17.654997+00:00", "zone": "fr-par-1"}}'
     headers:
       Content-Length:
-      - "431"
+      - "434"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
       - application/json
       Date:
-      - Mon, 20 Dec 2021 16:59:59 GMT
+      - Tue, 07 Dec 2021 10:50:18 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -149,7 +149,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - ce4d90a0-a8e7-49ba-b55a-456837e5fb7b
+      - fe70082e-0077-4b7b-ab81-47d7f05e9633
     status: 200 OK
     code: 200
     duration: ""
@@ -160,23 +160,23 @@ interactions:
       User-Agent:
       - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/d1f23647-e3a1-4c8f-b20e-eddb2f6f5301
+    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/8ac0fd56-7cf9-4c1d-a01b-6e61ba4970f7
     method: GET
   response:
-    body: '{"volume": {"id": "d1f23647-e3a1-4c8f-b20e-eddb2f6f5301", "name": "tf-vol-pedantic-tesla",
+    body: '{"volume": {"id": "8ac0fd56-7cf9-4c1d-a01b-6e61ba4970f7", "name": "tf-vol-dreamy-tereshkova",
       "volume_type": "l_ssd", "export_uri": null, "organization": "105bdce1-64c0-48ab-899d-868455867ecf",
       "project": "105bdce1-64c0-48ab-899d-868455867ecf", "server": null, "size": 20000000000,
-      "state": "available", "creation_date": "2021-12-20T16:59:58.188808+00:00", "modification_date":
-      "2021-12-20T16:59:58.188808+00:00", "zone": "fr-par-1"}}'
+      "state": "available", "creation_date": "2021-12-07T10:50:17.654997+00:00", "modification_date":
+      "2021-12-07T10:50:17.654997+00:00", "zone": "fr-par-1"}}'
     headers:
       Content-Length:
-      - "431"
+      - "434"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
       - application/json
       Date:
-      - Mon, 20 Dec 2021 16:59:59 GMT
+      - Tue, 07 Dec 2021 10:50:19 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -186,7 +186,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - d711cdc8-a12b-4791-8f8c-07f1e9d81063
+      - d9f26676-412c-48c0-a96b-5621e84280eb
     status: 200 OK
     code: 200
     duration: ""
@@ -197,23 +197,23 @@ interactions:
       User-Agent:
       - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/d1f23647-e3a1-4c8f-b20e-eddb2f6f5301
+    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/8ac0fd56-7cf9-4c1d-a01b-6e61ba4970f7
     method: GET
   response:
-    body: '{"volume": {"id": "d1f23647-e3a1-4c8f-b20e-eddb2f6f5301", "name": "tf-vol-pedantic-tesla",
+    body: '{"volume": {"id": "8ac0fd56-7cf9-4c1d-a01b-6e61ba4970f7", "name": "tf-vol-dreamy-tereshkova",
       "volume_type": "l_ssd", "export_uri": null, "organization": "105bdce1-64c0-48ab-899d-868455867ecf",
       "project": "105bdce1-64c0-48ab-899d-868455867ecf", "server": null, "size": 20000000000,
-      "state": "available", "creation_date": "2021-12-20T16:59:58.188808+00:00", "modification_date":
-      "2021-12-20T16:59:58.188808+00:00", "zone": "fr-par-1"}}'
+      "state": "available", "creation_date": "2021-12-07T10:50:17.654997+00:00", "modification_date":
+      "2021-12-07T10:50:17.654997+00:00", "zone": "fr-par-1"}}'
     headers:
       Content-Length:
-      - "431"
+      - "434"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
       - application/json
       Date:
-      - Mon, 20 Dec 2021 17:00:00 GMT
+      - Tue, 07 Dec 2021 10:50:19 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -223,7 +223,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - abc8dc78-3299-40a6-9fe6-bd12ede17024
+      - ac7b70bf-4b13-4379-92a8-7a73e6da2d30
     status: 200 OK
     code: 200
     duration: ""
@@ -234,7 +234,7 @@ interactions:
       User-Agent:
       - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/d1f23647-e3a1-4c8f-b20e-eddb2f6f5301
+    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/8ac0fd56-7cf9-4c1d-a01b-6e61ba4970f7
     method: DELETE
   response:
     body: ""
@@ -242,7 +242,7 @@ interactions:
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Date:
-      - Mon, 20 Dec 2021 17:00:00 GMT
+      - Tue, 07 Dec 2021 10:50:20 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -252,7 +252,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 761b957b-d1d6-44ef-9261-69c99e113063
+      - 2799a927-e357-42f9-918e-e117ad291079
     status: 204 No Content
     code: 204
     duration: ""
@@ -263,10 +263,10 @@ interactions:
       User-Agent:
       - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/d1f23647-e3a1-4c8f-b20e-eddb2f6f5301
+    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/8ac0fd56-7cf9-4c1d-a01b-6e61ba4970f7
     method: GET
   response:
-    body: '{"type": "unknown_resource", "message": "Volume ''d1f23647-e3a1-4c8f-b20e-eddb2f6f5301''
+    body: '{"type": "unknown_resource", "message": "Volume ''8ac0fd56-7cf9-4c1d-a01b-6e61ba4970f7''
       not found."}'
     headers:
       Content-Length:
@@ -276,7 +276,7 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Mon, 20 Dec 2021 17:00:00 GMT
+      - Tue, 07 Dec 2021 10:50:20 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -286,7 +286,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - c7017c25-784d-4a3b-b1f9-953296b52bcc
+      - 508e60be-2142-413d-87d8-15fc14d269ab
     status: 404 Not Found
     code: 404
     duration: ""
